fixing navbar overlapping issue

--- a/src/App.css
+++ b/src/App.css
@@ -127,3 +127,6 @@ nav ul {
 p{
   color: white;
 }
+.home{
+  margin-top: 32px;
+}
